@@ -14,7 +14,13 @@
 # You should have received a copy of the GNU General Public License
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-cmake_minimum_required(VERSION 3.5)
+# Why CMake 3.8?
+# This allows package maintainers to create reproducible builds:
+# > New in version 3.8: If the SOURCE_DATE_EPOCH environment variable is set,
+# > its value will be used instead of the current time.
+# > See https://reproducible-builds.org/specs/source-date-epoch/ for details.
+cmake_minimum_required(VERSION 3.8)
+
 project(deskflow C CXX)
 
 include(cmake/Version.cmake)
@@ -25,6 +31,7 @@ include(cmake/Packaging.cmake)
 
 set_version()
 configure_definitions()
+configure_build()
 configure_libs()
 configure_packaging()
 
